--- a/rickroll/style.css
+++ b/rickroll/style.css
@@ -1,11 +1,21 @@
 #title {
 	text-align: center;
+	font-family: arial;
+	color: #B5D3E7;
 }
 
 #rickroll {
-	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
 
 #lyrics {
 	text-align: center;
+	font-family: arial;
+	color: #B5D3E7;
+}
+
+body {
+	background-color: #000033;
 }
